[package]
name = "triple-triad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
rand = "0.8.5"
rayon = "1.5.3"
# https://serde.rs/derive.html
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
unicode-width = "0.1.10"
