[package]
name = "triple-triad"
version = "0.1.0"
description = "Triple Triad"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
colored = "2.0.0"
rand = "0.8.5"
rayon = "1.5.3"
# https://serde.rs/derive.html
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tauri = { version = "1.1", features = ["api-all", "devtools"] }
unicode-width = "0.1.10"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
